--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,24 @@
 .logo{
     width: 0%;
     padding: 0%;
-    list-style: none;
-}
-.sociais{
-    list-style: none;
-    margin-left: 10px;
-
-}
-.menu{
-    margin-left: 15px;
-    display: inline;
     float: left;
     list-style: none;
 }
+.sociais ul{
+    width: 0%;
+    padding: 2px;
+    list-style: none;
+    margin-left: 10px;
+    display: flex;
+    padding-left: 90%;
+}
+.banner{
+    margin: 0 auto;
+    float: left;
+    list-style: none;
+    
+}
+.column {
+    float: left;
+    width: 33.33%;
+  }
