--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,17 @@
     float: left;
     width: 33.33%;
   }
+.col-100 {
+    width: 100%;
+    float: left;
+    position: relative;
+}
+
+.col-3 {
+    text-align: left;
+    padding-left: 15px;
+    padding-right: 15px; 
+    width: 29%;
+    float: left;
+    position: relative;
+}
